[gd_scene load_steps=23 format=2]

[ext_resource path="res://Background/bg4.png" type="Texture" id=1]
[ext_resource path="res://PlayerAssets/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Background/bg2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Check.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Choice 1.gd" type="Script" id=6]
[ext_resource path="res://Background/bg1.png" type="Texture" id=7]
[ext_resource path="res://PlayerAssets/hand.png" type="Texture" id=8]
[ext_resource path="res://Background/bg3.png" type="Texture" id=10]
[ext_resource path="res://CreeperPixelRegular-DMYx.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scenes/Choice 2.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 668.63, 47.0815 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.3519, 294.946 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=4]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56.503, 119.281 ), Vector2( 96.9903, 107.432 ), Vector2( 155.064, 115.3 ), Vector2( 181.128, 118.877 ), Vector2( 225.128, 116.639 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SlideBack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 198.993, 116.582 ), Vector2( -20.2789, 101.955 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24.8409, 10 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 29.2506, 10.5447 )

[sub_resource type="DynamicFont" id=12]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="BaseScene" type="Node2D"]

[node name="Background4" type="Sprite" parent="."]
visible = false
position = Vector2( 284.052, 79.37 )
scale = Vector2( 0.71271, 0.71271 )
texture = ExtResource( 1 )

[node name="Background3" type="Sprite" parent="."]
visible = false
position = Vector2( 265.037, 89.6882 )
scale = Vector2( 0.693232, 0.693232 )
texture = ExtResource( 10 )

[node name="Background2" type="Sprite" parent="."]
visible = false
position = Vector2( 281.301, 84.946 )
scale = Vector2( 0.736893, 0.668195 )
texture = ExtResource( 3 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 299.565, 94.1389 )
scale = Vector2( 0.587242, 0.585212 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Bounds" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 329.347, 237.445 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 609.335, 126.489 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -13.6178, 124.943 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 396.026, 177.304 )
current = true
script = ExtResource( 4 )

[node name="Limits" type="Node" parent="Camera2D"]

[node name="TopLeft" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( 36.4196, -6.99268 )

[node name="BottomRight" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( 551.265, 189.763 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 493.0
margin_bottom = 242.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 121.838
margin_top = 83.6975
margin_right = 194.838
margin_bottom = 111.697
custom_fonts/font = SubResource( 8 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check 1" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Check 1" index="0"]
position = Vector2( 60.1501, 0.358596 )

[node name="Label" parent="Check 1" index="1"]
margin_left = 12.9565
margin_top = -42.6193
margin_right = 107.956
margin_bottom = -28.6193
custom_fonts/font = SubResource( 9 )
text = "Examine folder"

[node name="Check 2" parent="." instance=ExtResource( 5 )]
position = Vector2( 47.1223, 158.185 )

[node name="CollisionShape2D" parent="Check 2" index="0"]
position = Vector2( 98.2197, 12.6467 )

[node name="Label" parent="Check 2" index="1"]
margin_left = 77.6704
margin_top = -39.4779
margin_right = 121.67
margin_bottom = -25.4779
custom_fonts/font = SubResource( 10 )
text = "Examine ID"

[node name="Choice 1" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="SB_Patchy_Hand" type="Sprite" parent="Choice 1"]
position = Vector2( -117.572, 90.2027 )
scale = Vector2( 0.365703, 0.365703 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Choice 1/SB_Patchy_Hand"]
anims/Slide = SubResource( 4 )
anims/SlideBack = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choice 1"]
position = Vector2( 296.972, 177.699 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="Choice 1"]
margin_left = 283.51
margin_top = 170.929
margin_right = 346.51
margin_bottom = 192.929
custom_fonts/font = SubResource( 11 )
text = "I & I"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 2" type="Area2D" parent="."]
position = Vector2( 0, 1.25992 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choice 2"]
position = Vector2( 402.752, 178.603 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="Choice 2"]
margin_left = 387.863
margin_top = 169.706
margin_right = 427.863
margin_bottom = 183.706
custom_fonts/font = SubResource( 12 )
text = "You & I"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Choice 1" to="Choice 1" method="_on_Choice_1_body_entered"]
[connection signal="body_exited" from="Choice 1" to="Choice 1" method="_on_Choice_1_body_exited"]
[connection signal="animation_finished" from="Choice 1/SB_Patchy_Hand/AnimationPlayer" to="Choice 1" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Choice 2" to="Choice 2" method="_on_Choice_2_body_entered"]
[connection signal="body_exited" from="Choice 2" to="Choice 2" method="_on_Choice_2_body_exited"]

[editable path="Check 1"]
[editable path="Check 2"]
